force-app/main/default/objects/eSHIP_Standard_Pricing__c/eSHIP_Standard_Pricing__c.object-meta.xml
<CustomObject>
    <label>eSHIP Standard Pricing</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>eSHIP Standard Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eSHIP Standard Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>