force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/ACR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACR_Amount__c</fullName>
    <label>ACR Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>