force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Cash_Collection_Charges_in__c.field-meta.xml
<CustomField>
    <fullName>Cash_Collection_Charges_in__c</fullName>
    <label>Cash Collection Charges in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>