force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/COD_Charges_per_shipment__c.field-meta.xml
<CustomField>
    <fullName>COD_Charges_per_shipment__c</fullName>
    <label>COD Charges per shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>