force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/COD_Charges_percentage_e_of_product__c.field-meta.xml
<CustomField>
    <fullName>COD_Charges_percentage_e_of_product__c</fullName>
    <formula>if((Rate_INR__c * COD_Charges_percentage_of_product__c) &gt;  COD_Charges_per_shipment__c,Rate_INR__c * COD_Charges_percentage_of_product__c, COD_Charges_per_shipment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COD Charges percentage of product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>