force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/COD_Charges_percentage_of_product__c.field-meta.xml
<CustomField>
    <fullName>COD_Charges_percentage_of_product__c</fullName>
    <label>COD Charges percentage of product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>