force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Gross_Weight_Unit_for_Additional_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Unit_for_Additional_Weight__c</fullName>
    <label>Net/Gross Wt Unit for Additional Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>