force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>Package_Amount__c</fullName>
    <label>Package Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>120000</fullName>
            </value>
            <value>
                <fullName>500000</fullName>
            </value>
            <value>
                <fullName>1000000</fullName>
            </value>
            <value>
                <fullName>2500000</fullName>
            </value>
            <value>
                <fullName>250000</fullName>
            </value>
            <value>
                <fullName>175000</fullName>
                <isActive>false</isActive>
                <label>175000</label>
            </value>
            <value>
                <fullName>200000</fullName>
                <isActive>false</isActive>
                <label>200000</label>
            </value>
            <value>
                <fullName>275000</fullName>
                <isActive>false</isActive>
                <label>275000</label>
            </value>
            <value>
                <fullName>300000</fullName>
                <isActive>false</isActive>
                <label>300000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>