force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Rate_INR__c.field-meta.xml
<CustomField>
    <fullName>Rate_INR__c</fullName>
    <label>Rate INR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>