force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Slab_Level__c.field-meta.xml
<CustomField>
    <fullName>Slab_Level__c</fullName>
    <label>Slab Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
            <value>
                <fullName>Level 7</fullName>
            </value>
            <value>
                <fullName>Level 8</fullName>
            </value>
            <value>
                <fullName>Level 9</fullName>
            </value>
            <value>
                <fullName>Level 10</fullName>
            </value>
            <value>
                <fullName>Level N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>