force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/UOM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>UOM_Percentage__c</fullName>
    <label>UOM Percentage</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>