force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Weight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Weight_Charges__c</fullName>
    <label>Weight Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>