force-app/main/default/objects/eSHIP_Standard_Pricing__c/fields/Weight_Covered_Gms__c.field-meta.xml
<CustomField>
    <fullName>Weight_Covered_Gms__c</fullName>
    <label>Weight Covered Gms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>