force-app/main/default/objects/eSHIP_Standard_Pricing__c/recordTypes/Legacy_eSHIP_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Legacy_eSHIP_Pricing</fullName>
    <active>true</active>
    <label>Legacy eSHIP Pricing</label>
</RecordType>