force-app/main/default/objects/eSHIP_Standard_Pricing__c/recordTypes/New_eSHIP_Pricing.recordType-meta.xml
<RecordType>
    <fullName>New_eSHIP_Pricing</fullName>
    <active>true</active>
    <label>New eSHIP Pricing</label>
</RecordType>