force-app/main/default/objects/eSHIP_Standard_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Type__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Slab_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>